--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.mendigames.utils-unity",
+    "name": "com.mendigames.utilsunity",
     "version": "1.0.0",
     "displayName": "Unity Utils",
     "description": "Unity library of utils for everyone ",
